[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/graphics/objects/ui/buttons/left arrow/left_arrow_hover.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/objects/ui/buttons/right arrow/right_arrow_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/objects/ui/buttons/right arrow/right_arrow_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/objects/ui/buttons/left arrow/left_arrow_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/objects/ui/buttons/right arrow/right_arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/objects/ui/buttons/left arrow/left_arrow.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/objects/foods/apple.png" type="Texture" id=7]
[ext_resource path="res://scripts/Food Selector.gd" type="Script" id=8]
[ext_resource path="res://assets/themes/fonts/JustBubble.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Food Selector" type="HBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
custom_constants/separation = 50
alignment = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Left Button" type="TextureButton" parent="."]
margin_left = 214.0
margin_right = 278.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )

[node name="Food Selected" type="TextureRect" parent="."]
margin_left = 328.0
margin_right = 392.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 7 )
expand = true

[node name="Quantity" type="Label" parent="Food Selected"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -33.0
theme = SubResource( 2 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right Button" type="TextureButton" parent="."]
margin_left = 442.0
margin_right = 506.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[connection signal="pressed" from="Left Button" to="." method="_on_Left_Button_pressed"]
[connection signal="gui_input" from="Food Selected" to="." method="_on_Food_Selected_gui_input"]
[connection signal="pressed" from="Right Button" to="." method="_on_Right_Button_pressed"]
